<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.msk.mcq.MainActivity">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp">


        <TextView
            android:id="@+id/textView"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:textSize="20sp"
            android:textColor="#000" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/q11" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox1"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q12" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox2"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q13" />
        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox3"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q14" />




        <TextView
            android:id="@+id/textView2"
            android:layout_below="@+id/checkBox4"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            android:textSize="20sp"
            android:textColor="#000"/>

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/q21" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox5"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q22" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox6"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q23" />
        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox7"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q24" />




        <TextView
            android:id="@+id/textView3"
            android:layout_below="@+id/checkBox8"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            android:textSize="20sp"
            android:textColor="#000"/>

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/q31" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox9"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q32" />

        <CheckBox
            android:id="@+id/checkBox11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox10"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q33" />
        <CheckBox
            android:id="@+id/checkBox12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox11"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q34" />



        <TextView
            android:id="@+id/textView4"
            android:layout_below="@+id/checkBox12"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:textSize="20sp"
            android:textColor="#000"/>

        <CheckBox
            android:id="@+id/checkBox13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/q41" />

        <CheckBox
            android:id="@+id/checkBox14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox13"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q42" />

        <CheckBox
            android:id="@+id/checkBox15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox14"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q43" />
        <CheckBox
            android:id="@+id/checkBox16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox15"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q44" />




        <TextView
            android:id="@+id/textView5"
            android:layout_below="@+id/checkBox16"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/q5"
            android:textSize="20sp"
            android:textColor="#000"/>

        <CheckBox
            android:id="@+id/checkBox17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/q51" />

        <CheckBox
            android:id="@+id/checkBox18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox17"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q52" />

        <CheckBox
            android:id="@+id/checkBox19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox18"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q53" />
        <CheckBox
            android:id="@+id/checkBox20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox19"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:text="@string/q54" />





        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkBox20"
            android:id="@+id/submit"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"
            android:text="SUBMIT"/>


        <TextView
            android:id="@+id/textView8"
            android:layout_below="@+id/submit"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="italic"
            android:text="@string/ans"
            android:textColor="#000"/>

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reset"
            android:layout_below="@+id/textView8"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="30dp"
            android:layout_alignParentBottom="true"
            />


        <Button
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show"
            android:layout_alignParentBottom="true"
            android:layout_toEndOf="@+id/checkBox6"
            android:layout_marginBottom="30dp"
            />
    </RelativeLayout>



</ScrollView>
